--- a/wiki/GraphicsTests.wiki
+++ b/wiki/GraphicsTests.wiki
@@ -29,6 +29,6 @@ GRAPHICS_PERFORMANCE_TEST("basic/graphics/basicClear", GraphicsBasicClear)
 
 There are two main differences here. First, `GRAPHICS_PERFORMANCE_TEST` is used instead of `PERFORMANCE_TEST`. Second, `renderFrame()` is used instead of `test()`.
 
-Also, notice that `initialize()` calls up to its parent class using the automatically provided `Parent` typedef. This is important, as the graphics performance test base class initializes DXUT in `initialize()`. If you override `initialize()`, `initializeWithIndependent`, `teardown()`, or `test()`, be sure to call Parent. You should also review the `GraphicsPerformanceTest` class to make sure that your code does not conflict.
+Also, notice that `initialize()` calls up to its parent class using the automatically provided `Parent` typedef. This is important, as the graphics performance test base class initializes DXUT in `initialize()`. If you override `initialize()`, `teardown()`, or `test()`, be sure to call Parent. You should also review the `GraphicsPerformanceTest` class to make sure that your code does not conflict.
 
 There are a few members you can set or call that are useful for writing graphics tests. See `GraphicsPerformanceTest` for the definitive list.
