Edited wiki page through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -27,18 +27,20 @@ Utility Development
   * Cache purge utility - Allocate a large chunk of memory and step through it, then delete it, so that the cache is cleared before running a test.
 
 GPU Tests
+
   * Vertex Buffer Size -A single vertex buffer will have an optimal size.  Build a vertex buffer of varying size from small to large and determine, via framerate, what the optimal size is for your hardware.  Start with the vertex limiter so that the program begins at 60 hertz.  The test is over when the fps reaches 30 fps.
 
-  * Vertex Alignment - Create a degenerate triangle strip of 500,000 vertices.  Create as many permutations as possible to generate different size vertex types.  The assumption is that vertex types that are aligned to the cache boundaries of the vertex fetching system should be faster than those that are not.  Use the vertex limiter to bring the framerate to 60 fps.  Once at 60 fps, switch the buffer to different vertex buffers and record the output.
+  * Vertex Alignment - Start by implmenting the vertex limiter.  Using different permutations of vertex types, increase buffer size until the fps is 30 Hz. Report the total size of the vertex (number of bytes*sizof(vertexformat)).   The assumption is that vertex types that are aligned to the cache boundaries of the vertex fetching system should be faster than those that are not.  Vertex buffers must be static as to reduce graphics bus bandwidth.
 
-  * Overdraw Performance -  use a full screen quad and gather the frame rate at overdraw values of 0,1,2,3,4…x.  Use the fullscreen quad draw to bring the frame rate down to 60.  Once there, continue to add fullsreen quads until the frame rate is below 30.  Record the fps and number of quads after the 60 hz is achieved.
+  * Overdraw Performance -  use a full screen quad and a small frambuffer to gather the frame rate at overdraw values of 0,1,2,3,4…x.  Use the fullscreen quad draw to bring the frame rate down to 60.  Once there, continue to add fullsreen quads until the frame rate is at 30 Hz.  Record the fps and number of quads after the 60 hz is achieved.
 
 CPU Tests
-  * CPU Stream Count
-  * float vs. double performance
-  * integer vs. long performance
-  * integer vs. float performance
-  * float vs. double performance
-  * random vs. linear memory access vs. strided access
-  * single vs. multi-thread linear access
-  * single vs. multi-thread random access
+  * CPU Stream Count - Hardware prefetching hides the latency of memory fetching for our CPUs.  Hardware prefetching can track more than one "stream" of memory.  Create a struct with at least 32 members in a Structure of Arrays (SOA) format.  Array size should be 4 megs.  In your first test, linearly access memory in the first member.  In the second test, iterate through the first and second member, but only iterate halfway through the entire array.  The assumption is that the CPU can track multiple streams of memory for hardware prefetching.  This test attempts to plot increasing numbers of streams without increasing the total amount of memory streamed.
+
+  * Datatypes and Operators - This test iterates through a series of *,/,-, and + operators for different datatypes.  To reduce unfair compilation optimizations, perform these tests on series of linear arrays populated with random data of the appropriate types.
+
+  * random vs. linear memory access vs. strided access - Memory latency is hidden by hareware prefetching.  This test measures different access patterns in memory.  Memory traversals on integer datatypes will be random, linear, and strided access.  (note: this test is alreay implmented)
+
+  * multi-thread linear access - perform linear access on an array using a linear memory access pattern.  Collect data for [1..64] threads.
+
+  * single vs. multi-thread random access  - perform the same test as the above test replacing linear access with random access.
