--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -20,7 +20,7 @@ Utility Development
 
   * Pixel Shader Limiter - the pixel shader limiter shall do the same as the vertex limiter, except it shall perform the pixel work using the full screen quad limiter to perform this job.
 
-  * Texture Limiter - the texture limiter shall perform the same work as the vertex limiter, except it shall perform the texture work by rendering textures of varying sizes and ammount to a full screen quad.
+  * Texture Limiter - the texture limiter shall perform the same work as the vertex limiter, except it shall perform the texture work by rendering textures of varying sizes and ammount to a full screen quad.  Users shall be able to specify texture format for the texture limiter.
 
   * XML utility: So that the xml output is better encapsulated ( to be better defined )
 
@@ -39,11 +39,18 @@ GPU Tests
   * Frequency of Updating a Static Vertex Buffer - It has been suggested that some drivers will change a static vertex buffer that is locked more often to a dynamic buffer that utilizes non-local video memory.  Use the vertex limiter to create a scene that executes at 60 Hz.  Create an fill a vertex buffer until the framerate is 30 Hz. Lock the buffer at intervals other than every frame and track the framerate delta.
 
   * Vertex Shader Control of Flow - Using the shader lab, experiment with different types of vertex shader branches to determine performance.  Chart the differences between:
-	If then else statements with random conditions
-	If then else statements without predictable conditions
-        If then else statements with semi-random conditions (interleave true and false on intervals of 31, 32, and 33.)
-	Loops with random conditions
-	Loops with static conditions
+	
+1)If then else statements with random conditions
+	
+1)If then else statements without predictable conditions
+        
+2)If then else statements with semi-random conditions (interleave true and false on intervals of 31, 32, and 33.)
+	
+3)Loops with random conditions
+	
+4)Loops with static conditions
+
+  * Texture Filtering Performance - Using the texture limiter, create an application that is texture bound.  Use a simple shader to test out all types of filtering performance.  Use a DXT1 texture as your test texture.
 
 
 CPU Tests
